exports[`no-duplicate-set-values > invalid(1): new Set([1, 2, 1]) 1`] = `

  1 | new Set([1, 2, 1])

`;

exports[`no-duplicate-set-values > invalid(1): new Set([1, 2, 1]) 2`] = `

Message:
> 1 | new Set([1, 2, 1])
    |                ^ Remove duplicate value \`1\` from the Set.

`;

exports[`no-duplicate-set-values > invalid(10): new Set([0, -0]) 1`] = `

  1 | new Set([0, -0])

`;

exports[`no-duplicate-set-values > invalid(10): new Set([0, -0]) 2`] = `

Message:
> 1 | new Set([0, -0])
    |             ^^ Remove duplicate value \`-0\` from the Set.

`;

exports[`no-duplicate-set-values > invalid(11): new Set([1, 1, 2, 2]) 1`] = `

  1 | new Set([1, 1, 2, 2])

`;

exports[`no-duplicate-set-values > invalid(11): new Set([1, 1, 2, 2]) 2`] = `

Message:
> 1 | new Set([1, 1, 2, 2])
    |             ^ Remove duplicate value \`1\` from the Set.

`;

exports[`no-duplicate-set-values > invalid(11): new Set([1, 1, 2, 2]) 3`] = `

Message:
> 1 | new Set([1, 1, 2, 2])
    |                   ^ Remove duplicate value \`2\` from the Set.

`;

exports[`no-duplicate-set-values > invalid(12): new Set([1 + 1, 2]) 1`] = `

  1 | new Set([1 + 1, 2])

`;

exports[`no-duplicate-set-values > invalid(12): new Set([1 + 1, 2]) 2`] = `

Message:
> 1 | new Set([1 + 1, 2])
    |                 ^ Remove duplicate value \`2\` from the Set.

`;

exports[`no-duplicate-set-values > invalid(13): new Set([\`foo\`, \"foo\"]) 1`] = `

  1 | new Set([\`foo\`, "foo"])

`;

exports[`no-duplicate-set-values > invalid(13): new Set([\`foo\`, \"foo\"]) 2`] = `

Message:
> 1 | new Set([\`foo\`, "foo"])
    |                 ^^^^^ Remove duplicate value \`"foo"\` from the Set.

`;

exports[`no-duplicate-set-values > invalid(14): new Set([foo, foo]) 1`] = `

  1 | new Set([foo, foo])

`;

exports[`no-duplicate-set-values > invalid(14): new Set([foo, foo]) 2`] = `

Message:
> 1 | new Set([foo, foo])
    |               ^^^ Remove duplicate value \`foo\` from the Set.

`;

exports[`no-duplicate-set-values > invalid(15): new Set([foo.bar, foo.bar]) 1`] = `

  1 | new Set([foo.bar, foo.bar])

`;

exports[`no-duplicate-set-values > invalid(15): new Set([foo.bar, foo.bar]) 2`] = `

Message:
> 1 | new Set([foo.bar, foo.bar])
    |                   ^^^^^^^ Remove duplicate value \`foo.bar\` from the Set.

`;

exports[`no-duplicate-set-values > invalid(16): new Set([foo[\"bar\"], foo.bar]) 1`] = `

  1 | new Set([foo["bar"], foo.bar])

`;

exports[`no-duplicate-set-values > invalid(16): new Set([foo[\"bar\"], foo.bar]) 2`] = `

Message:
> 1 | new Set([foo["bar"], foo.bar])
    |                      ^^^^^^^ Remove duplicate value \`foo.bar\` from the Set.

`;

exports[`no-duplicate-set-values > invalid(17): new Set([this.foo, this.foo]) 1`] = `

  1 | new Set([this.foo, this.foo])

`;

exports[`no-duplicate-set-values > invalid(17): new Set([this.foo, this.foo]) 2`] = `

Message:
> 1 | new Set([this.foo, this.foo])
    |                    ^^^^^^^^ Remove duplicate value \`this.foo\` from the Set.

`;

exports[`no-duplicate-set-values > invalid(18): new Set([foo, ...bar, foo]) 1`] = `

  1 | new Set([foo, ...bar, foo])

`;

exports[`no-duplicate-set-values > invalid(18): new Set([foo, ...bar, foo]) 2`] = `

Message:
> 1 | new Set([foo, ...bar, foo])
    |                       ^^^ Remove duplicate value \`foo\` from the Set.

`;

exports[`no-duplicate-set-values > invalid(19): const foo = 2;\nnew Set([foo, 2]); 1`] = `

  1 | const foo = 2;
  2 | new Set([foo, 2]);

`;

exports[`no-duplicate-set-values > invalid(19): const foo = 2;\nnew Set([foo, 2]); 2`] = `

Message:
  1 | const foo = 2;
> 2 | new Set([foo, 2]);
    |               ^ Remove duplicate value \`2\` from the Set.

`;

exports[`no-duplicate-set-values > invalid(2): new Set([\"foo\", \"bar\", \"foo\"]) 1`] = `

  1 | new Set(["foo", "bar", "foo"])

`;

exports[`no-duplicate-set-values > invalid(2): new Set([\"foo\", \"bar\", \"foo\"]) 2`] = `

Message:
> 1 | new Set(["foo", "bar", "foo"])
    |                        ^^^^^ Remove duplicate value \`"foo"\` from the Set.

`;

exports[`no-duplicate-set-values > invalid(20): const foo = 'bar';\nnew Set([foo, 'bar']); 1`] = `

  1 | const foo = 'bar';
  2 | new Set([foo, 'bar']);

`;

exports[`no-duplicate-set-values > invalid(20): const foo = 'bar';\nnew Set([foo, 'bar']); 2`] = `

Message:
  1 | const foo = 'bar';
> 2 | new Set([foo, 'bar']);
    |               ^^^^^ Remove duplicate value \`'bar'\` from the Set.

`;

exports[`no-duplicate-set-values > invalid(21): const foo = undefined;\nnew Set([foo, undefined]); 1`] = `

  1 | const foo = undefined;
  2 | new Set([foo, undefined]);

`;

exports[`no-duplicate-set-values > invalid(21): const foo = undefined;\nnew Set([foo, undefined]); 2`] = `

Message:
  1 | const foo = undefined;
> 2 | new Set([foo, undefined]);
    |               ^^^^^^^^^ Remove duplicate value \`undefined\` from the Set.

`;

exports[`no-duplicate-set-values > invalid(22): const foo = {};\nnew Set([foo, foo]); 1`] = `

  1 | const foo = {};
  2 | new Set([foo, foo]);

`;

exports[`no-duplicate-set-values > invalid(22): const foo = {};\nnew Set([foo, foo]); 2`] = `

Message:
  1 | const foo = {};
> 2 | new Set([foo, foo]);
    |               ^^^ Remove duplicate value \`foo\` from the Set.

`;

exports[`no-duplicate-set-values > invalid(23): new Set([1, 2, 1] as const); 1`] = `

  1 | new Set([1, 2, 1] as const);

`;

exports[`no-duplicate-set-values > invalid(23): new Set([1, 2, 1] as const); 2`] = `

Message:
> 1 | new Set([1, 2, 1] as const);
    |                ^ Remove duplicate value \`1\` from the Set.

`;

exports[`no-duplicate-set-values > invalid(24): new Set([1, 1]!); 1`] = `

  1 | new Set([1, 1]!);

`;

exports[`no-duplicate-set-values > invalid(24): new Set([1, 1]!); 2`] = `

Message:
> 1 | new Set([1, 1]!);
    |             ^ Remove duplicate value \`1\` from the Set.

`;

exports[`no-duplicate-set-values > invalid(25): new Set([1, 2, 1] satisfies number[]); 1`] = `

  1 | new Set([1, 2, 1] satisfies number[]);

`;

exports[`no-duplicate-set-values > invalid(25): new Set([1, 2, 1] satisfies number[]); 2`] = `

Message:
> 1 | new Set([1, 2, 1] satisfies number[]);
    |                ^ Remove duplicate value \`1\` from the Set.

`;

exports[`no-duplicate-set-values > invalid(3): new Set([null, null]) 1`] = `

  1 | new Set([null, null])

`;

exports[`no-duplicate-set-values > invalid(3): new Set([null, null]) 2`] = `

Message:
> 1 | new Set([null, null])
    |                ^^^^ Remove duplicate value \`null\` from the Set.

`;

exports[`no-duplicate-set-values > invalid(4): new Set([undefined, undefined]) 1`] = `

  1 | new Set([undefined, undefined])

`;

exports[`no-duplicate-set-values > invalid(4): new Set([undefined, undefined]) 2`] = `

Message:
> 1 | new Set([undefined, undefined])
    |                     ^^^^^^^^^ Remove duplicate value \`undefined\` from the Set.

`;

exports[`no-duplicate-set-values > invalid(5): new Set([, undefined]) 1`] = `

  1 | new Set([, undefined])

`;

exports[`no-duplicate-set-values > invalid(5): new Set([, undefined]) 2`] = `

Message:
> 1 | new Set([, undefined])
    |            ^^^^^^^^^ Remove duplicate value \`undefined\` from the Set.

`;

exports[`no-duplicate-set-values > invalid(6): new Set([undefined, ,]) 1`] = `

  1 | new Set([undefined, ,])

`;

exports[`no-duplicate-set-values > invalid(6): new Set([undefined, ,]) 2`] = `

Message:
> 1 | new Set([undefined, ,])
    |         ^^^^^^^^^^^^^^ Remove duplicate value \`undefined\` from the Set.

`;

exports[`no-duplicate-set-values > invalid(7): new Set([,,]) 1`] = `

  1 | new Set([,,])

`;

exports[`no-duplicate-set-values > invalid(7): new Set([,,]) 2`] = `

Message:
> 1 | new Set([,,])
    |         ^^^^ Remove duplicate value \`undefined\` from the Set.

`;

exports[`no-duplicate-set-values > invalid(8): new Set([-1, -1]) 1`] = `

  1 | new Set([-1, -1])

`;

exports[`no-duplicate-set-values > invalid(8): new Set([-1, -1]) 2`] = `

Message:
> 1 | new Set([-1, -1])
    |              ^^ Remove duplicate value \`-1\` from the Set.

`;

exports[`no-duplicate-set-values > invalid(9): new Set([NaN, NaN]) 1`] = `

  1 | new Set([NaN, NaN])

`;

exports[`no-duplicate-set-values > invalid(9): new Set([NaN, NaN]) 2`] = `

Message:
> 1 | new Set([NaN, NaN])
    |               ^^^ Remove duplicate value \`NaN\` from the Set.

`;
